# whistle

./: .gitignore  README.md  package.json  pnpm-lock.yaml  todos.md
.cursor/rules/: tauri-conf.mdc
.github/workflows/: release.yaml
src/: App.css  App.tsx  MessageDisplay.tsx  Shortcuts.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: audio_recorder.rs  constants.rs  debouncer.rs  enigo_instance.rs  key_logger.rs  key_state_manager.rs  lib.rs  local_task_handler.rs  main.rs  media_manager.rs  notifications.rs  shortcuts.rs  transcribe_app_logger.rs  transcribe_client.rs  transcribe_icon.rs
src-tauri/src/commands/: assign_shortcut.rs  mod.rs
src/components/: MessageDisplay.tsx  ShortcutInput.tsx  ShortcutsReader.tsx
src/utils/: shortcuts.ts
