[package]
name = "my-tauri-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["alex t. <aletapia@proton.me>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
cpal = "0.15.3"
hound = "3.5.1"
chrono = "0.4.40"
tokio = { version = "1.43.0", features = ["full"] }
