[package]
name = "whisper-app"
version = "0.1.0"
description = "A simple app to transcribe audio to text"
authors = ["alex t. <aletapia@proton.me>"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
cpal = "0.15.3"
hound = "3.5.1"
chrono = "0.4.40"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.97"
tempfile = "3.10.1"
log = "0.4.26"
env_logger = "0.11.6"
device_query = "3.0.0"
colored = "3.0.0"
enigo = "0.3.0"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
macos-accessibility-client = "0.0.1"
